saving my changes

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -25,6 +25,10 @@
     is a card game in which all of the cards are laid facedown on a surface and two cards are flipped
     face up over each turn. The object of the game is to turn over pairs of matching cards.</p><hr>
 
+    <form id="myForm">
+      <input type="button" onclick="myFunction()" value="Reset">
+    </form>
+
 <div class="social">
     <a href="https://twitter.com/namelessprofit">
       <img title="Twitter" alt="Twitter" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png"/>
